feat: pwa 아이콘 추가

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://alphamails.vercel.app/" />
     <meta property="og:title" content="alpha mail" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/images/logo.svg" />
+    <meta property="og:image" content="/images/logo2.svg" />
     <meta
       property="og:description"
       content="대학생과 직장인을 위한 AI 기반 메일 생성 서비스, alpha mail"
